Trade_coin: Header - complete by duplicating from homepage.html - Update html, css and add demo03

--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -17,7 +17,77 @@
     <div id="app">
         <div class="trade_coin">
             <div class="grid-container">
-                <div class="header"></div>
+                <div class="header">
+                    <div class="header-top">
+                        <header>
+                            <a href="" style="margin: 0 8px;display: flex;align-items: center;align-items: center;">
+                                <img src="../static/img/homepage/logo.png" alt="" style="width: 120px;height: 24px;">
+                            </a>
+                            <div class="flex-menu">
+                                <div class="item-menu" style="width: 58px; ">
+                                    <img src="../static/img/homepage/dots-menu.png" alt="" style="width: 20px; height:20px;">
+                                    <i class="fa fa-caret-down" aria-hidden="true" style="margin: 0;"></i>
+                                </div>
+                                <div class="item-menu">
+                                    <p>Buy Crypto</p>
+                                    <div class="vnd">VND</div>
+                                    <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                </div>
+                                <div class="item-menu">
+                                    <p>Markets</p>
+                                    <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                </div>
+                                <div class="item-menu">
+                                    <p>Trade</p>
+                                    <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                </div>
+                                <div class="item-menu">
+                                    <p>Derivatives</p>
+                                    <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                </div>
+                                <div class="item-menu">
+                                    <p>Earn</p>
+                                    <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                </div>
+                                <div class="item-menu">
+                                    <p>Finance</p>
+                                    <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                </div>
+                                <div class="item-menu">
+                                    <p>NFT</p>
+                                </div>
+                                <div class="item-menu">
+                                    <p>Institutional</p>
+                                    <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                </div>
+                                <div class="item-menu">
+                                    <p>Feed</p>
+                                </div>
+                            </div>
+                            <div class="flex-empty"></div>
+                            <div class="flex-login">
+                                <a href="">Log In</a>
+                                <a href="" class="flex-a">
+                                    <i class="fa fa-gift" aria-hidden="true" style="color: black; opacity: 1;"></i>
+                                    <p>Register</p>
+                                </a>
+                            </div>
+                            <div class="flex-feature">
+                                <div class="item1">
+                                    <i class="fas fa-download"></i>
+                                </div>
+                                <div class="item2">
+                                    <i class="fas fa-globe-africa"></i>
+                                    <p class="bar">|</p>
+                                    <p>VND</p>
+                                    <p class="bar">|</p>
+                                    <i class="fas fa-sun"></i>
+                                </div>
+                            </div>
+                        </header>
+                    </div>
+                    <div></div>
+                </div>
                 <div class="subHeader"></div>
                 <div class="orderbook"></div>
                 <div class="chart"></div>
