--- a/static/css/trade_coin.css
+++ b/static/css/trade_coin.css
@@ -128,3 +128,167 @@ html {
 .footer{
     grid-area: footer;
 }
+a {
+    text-decoration: none;
+    color: rgb(234, 236, 239);
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    cursor: pointer;
+}
+
+.header-top{
+    box-sizing: border-box;
+    margin: 0px;
+    min-width: 0px;
+    background-color: rgb(22, 26, 30);
+}
+header {
+    box-sizing: border-box;
+    margin: 0;
+    min-width: 0;
+    display: flex;
+    background-color: #181A20;
+    height: 64px;
+    width: 100%;
+    padding: 0 16px;
+    align-items: center;
+}
+
+header i {
+    color: #EAECEF;
+    margin: 0 4px;
+    opacity: 0.6;
+}
+
+.flex-menu {
+    display: flex;
+    height: 100%;
+}
+
+.item-menu {
+    padding: 0 8px;
+    box-sizing: border-box;
+    margin: 0;
+    min-width: 0;
+    display: flex;
+    font-size: 14px;
+    cursor: pointer;
+    color: #EAECEF;
+    justify-content: space-evenly;
+    align-items: center;
+    text-decoration: none;
+    height: 100%;
+}
+
+.vnd {
+    box-sizing: border-box;
+    margin: 0;
+    min-width: 0;
+    display: flex;
+    position: relative;
+    border-radius: 4px;
+    margin-left: 8px;
+    padding-left: 4px;
+    padding-right: 4px;
+    font-size: 12px;
+    line-height: 16px;
+    background-color: #FCD535;
+    color: #1E2329;
+}
+
+.vnd:before {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    left: -3px;
+    top: 2px;
+    border-left: 0;
+    border-top: 6px solid transparent;
+    border-bottom: 6px solid transparent;
+    border-right: 6px solid;
+    border-right-color: #F0B90B;
+}
+
+.fa-sun,
+.fa-download,
+.fa-globe-africa {
+    opacity: 1;
+}
+
+.flex-login {
+    padding: 0 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.flex-login a {
+    margin: 0;
+    padding: 6px 12px;
+    max-height: 20px;
+}
+
+.flex-login .flex-a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 52px;
+    background-color: rgb(252, 213, 53);
+    color: rgb(24, 26, 32);
+    border-radius: 4px;
+    font-size: 14px;
+    margin-left: 12px;
+}
+.flex-empty {
+    width: 108.77px;
+}
+.flex-feature {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+
+}
+
+.flex-feature .item1 {
+    padding: 0 8px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.flex-feature .item2 {
+    padding: 0 8px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #EAECEF;
+    font-size: 14px;
+    height: 100%;
+
+}
+
+.fa-globe-africa {
+    margin: 0;
+    color: #ffffff;
+
+}
+
+.flex-feature p,
+i {
+
+    cursor: pointer;
+}
+
+.flex-feature p {
+    margin: 0;
+}
+
+.flex-feature .item2 .bar {
+    margin: 0 8px;
+    color: #5E6673;
+    cursor: none;
+}
