--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -88,7 +88,26 @@
                     </div>
                     <div></div>
                 </div>
-                <div class="subHeader"></div>
+                <div class="subHeader">
+                    <div class="subHeader-flex">
+                        <div class="subHeader-left">
+                            <div class="left">
+                                <div class="children-container">
+                                    <div class="coin-item">
+                                        <div class="coin-title">BTC/USDT</div>
+                                        <div class="btn-pow">POW</div>
+                                    </div>
+                                    <div class="sub-coin-item">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="iconLeave css-bka6he"><path d="M15.11 5.63L6 6.89 15.11 4v1.63zM17.61 6.89v11.2h-1.25V8.33L6 6.89h11.61z" fill="currentColor"></path><path d="M6 6.89v11.16l.1.01.07.01.17.03h-.27l9.04 2.86V9.77L6 6.89zm3.4 3.2l1.87.6v1.84l-1.87-.59v-1.85zm1.87 7.66l-1.87-.59.03-3.85 1.88.59-.04 3.85z" fill="currentColor"></path></svg>
+                                        <a data-bn-type="link" href="https://www.binance.com/en/price/bitcoin" disabled="" target="_blank" class="css-im337v">Bitcoin Price</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="right"></div>
+                        </div>
+                        <div class="subHeader-right"></div>
+                    </div>
+                </div>
                 <div class="orderbook"></div>
                 <div class="chart"></div>
                 <div class="orderform"></div>
