--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -102,6 +102,10 @@
                                         <a data-bn-type="link" href="https://www.binance.com/en/price/bitcoin" disabled="" target="_blank" class="css-im337v">Bitcoin Price</a>
                                     </div>
                                 </div>
+                                <div class="children-container2">
+                                    <div class="up">27,659.65</div>
+                                    <div class="down">$27,659.66</div>
+                                </div>
                             </div>
                             <div class="right"></div>
                         </div>
