Trade_coin: subHeader - add child right with 24 change title - Update html, css and add demo06

--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -107,7 +107,16 @@
                                     <div class="down">$27,659.66</div>
                                 </div>
                             </div>
-                            <div class="right"></div>
+                            <div class="right">
+                                <div class="child-right">
+                                    <div class="child-right-item">
+                                        <div class="up">24h Change</div>
+                                        <div class="down" style="color: rgb(14, 203, 129);">258.18+0.94%</div>
+                                    </div>
+                                    
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="subHeader-right"></div>
                     </div>
