--- a/static/css/trade_coin.css
+++ b/static/css/trade_coin.css
@@ -450,3 +450,38 @@ a{
     overflow: hidden;
 
 }
+.subHeader-left .right .child-right{
+    display: flex;
+    flex-flow: row nowrap;
+    box-sizing: border-box;
+    -webkit-box-align: center;
+    align-items: center;
+    position: relative;
+    margin-left: 32px;
+    margin-right: 8px;
+    overflow: hidden;
+    white-space: nowrap;
+    overflow: auto hidden;
+}
+.child-right-item{
+    display: inline-block;
+    padding-right: 1.4vw;
+}
+.child-right-item .up{
+    font-size: 12px;
+    margin-right: 0px;
+    margin-bottom: 2px;
+    color: rgb(132, 142, 156);
+    line-height: 16px;
+    font-weight: 400;
+    text-align: left;
+    border-bottom: 1px solid transparent;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+.child-right-item .down{
+    display: flex;
+    font-size: 12px;
+    color: rgb(234, 236, 239);
+}
