Trade_coin: subHeader - add child right with 24h high - Update html, css and add demo07

--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -113,7 +113,21 @@
                                         <div class="up">24h Change</div>
                                         <div class="down" style="color: rgb(14, 203, 129);">258.18+0.94%</div>
                                     </div>
-                                    
+                                    <div class="child-right-item">
+                                        <div class="up">24h Hight</div>
+                                        <div class="down">27,882.72</div>
+                                    </div>
+                                    <div class="child-right-item">
+                                        <div class="up">24h Low</div>
+                                        <div class="down">27,231.00</div>
+                                    </div>
+                                    <div class="child-right-item">
+                                        <div class="up">24h Volume(BTC)</div>
+                                        <div class="down">27,231.00</div>
+                                    </div>
+                                    <div class="child-right-item">
+                                        <div class="up">24h Volume(USDT)</div>
+                                        <div class="down">1,028,266,210.92</div>
                                     </div>
                                 </div>
                             </div>
