--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -132,7 +132,16 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="subHeader-right"></div>
+                        <div class="subHeader-right">
+                            <div class="guide-left">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-1l3piql"><path fill-rule="evenodd" clip-rule="evenodd" d="M3 12a9 9 0 1118 0 9 9 0 01-18 0zm8.934 3.5H10v-7h1.934L16 12l-4.066 3.5z" fill="currentColor"></path></svg>
+                                <span style="margin-left: 4px; color: rgb(132, 142, 156); font-size: 12px; cursor: pointer;">Spot Tutorial</span>
+                            </div>
+                            <div class="guide-left" style="margin-left: 16px;">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-1l3piql"><path fill-rule="evenodd" clip-rule="evenodd" d="M4.896 3h14v18h-14V3zm11 13v2h-8v-2h8zm-8-3h8V6h-8v7zm6-5h-4v3h4V8z" fill="currentColor"></path></svg>
+                                <span style="margin-left: 4px; color: rgb(132, 142, 156); font-size: 12px; cursor: pointer;">Spot Guidance</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="orderbook"></div>
