Trade_coin: Orderbook - create three buttons in left header - Update html, css and add demo14

--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -144,7 +144,18 @@
                         </div>
                     </div>
                 </div>
-                <div class="orderbook"></div>
+                <div class="orderbook">
+                    <div class="orderbook-header">
+                        <div class="bookleft">
+                            <button><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-3kwgah"><path d="M4 4h7v7H4V4z" fill="#F6465D"></path><path d="M4 13h7v7H4v-7z" fill="#0ECB81"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M13 4h7v4h-7V4zm0 6h7v4h-7v-4zm7 6h-7v4h7v-4z" fill="currentColor"></path></svg></button>
+                            <button><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-3kwgah"><path d="M4 4h7v7H4V4z" fill="#F6465D"></path><path d="M4 13h7v7H4v-7z" fill="#0ECB81"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M13 4h7v4h-7V4zm0 6h7v4h-7v-4zm7 6h-7v4h7v-4z" fill="currentColor"></path></svg></button>
+                            <button><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-3kwgah"><path d="M4 4h7v7H4V4z" fill="#F6465D"></path><path d="M4 13h7v7H4v-7z" fill="#0ECB81"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M13 4h7v4h-7V4zm0 6h7v4h-7v-4zm7 6h-7v4h7v-4z" fill="currentColor"></path></svg></button>
+                        </div>
+                        <div class="bookright"></div>
+                    </div>
+                    <div class="orderbook-tbheader"></div>
+                    <div class="orderlist-container"></div>
+                </div>
                 <div class="chart"></div>
                 <div class="orderform"></div>
                 <div class="market"></div>
