--- a/static/css/trade_coin.css
+++ b/static/css/trade_coin.css
@@ -116,6 +116,19 @@ html {
 }
 .orderbook{
     grid-area: orderbook;
+    box-sizing: border-box;
+    margin: 0px;
+    min-width: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(22, 26, 30);
+    grid-area: orderbook / orderbook / orderbook / orderbook;
+    position: relative;
+    padding-top: 16px;
+    padding-bottom: 4px;
+    display: flex;
+    flex: 1 1 0%;
+    flex-direction: column;
 }
 .chart{
     grid-area: chart;
@@ -499,6 +512,92 @@ i {
     color: rgb(132, 142, 156);
     font-size: 16px;
     fill: rgb(132, 142, 156);
+    width: 1em;
+    height: 1em;
+}
+.orderbook >div:not(:hover){
+    overflow: hidden;
+}
+@media screen and (min-width: 767px){
+.css-12qarqx .orderbook-header {
+    -webkit-box-align: center;
+    align-items: center;
+    margin-left: 12px;
+    margin-right: 16px;
+    margin-bottom: 8px;
+    position: relative;
+    -webkit-box-pack: initial;
+    justify-content: initial;
+}}
+.orderbook-header {
+    display: flex;
+    -webkit-box-align: initial;
+    align-items: initial;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    position: initial;
+    justify-content: space-around;
+}
+.bookleft{
+    display: flex;
+    align-items: center;
+}
+.bookright{
+    display: flex;
+    -webkit-box-pack: end;
+    justify-content: flex-end;
+    right: 0px;
+    position: absolute;
+    flex: 0 0 auto;
+    padding-left: 0px;
+    padding-right: 0px;
+    margin-left: 0px;
+    -webkit-box-align: initial;
+    align-items: initial;
+    -webkit-box-pack: initial;
+    justify-content: initial;
+}
+.bookleft button{
+    height: 24px;
+    flex: initial;
+    margin: 0px 4px 0px 0px;
+    appearance: none;
+    user-select: none;
+    cursor: pointer;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    display: inline-flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    box-sizing: border-box;
+    font-size: 14px;
+    font-family: inherit;
+    font-weight: 500;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    line-height: 20px;
+    padding: 0px 4px;
+    border: none;
+    border-radius: 2px;
+    width: 36px;
+    min-width: auto;
+    height: 32px;
+    background-color: transparent;
+    opacity: 0.5;
+    flex: 1 1 0%;
+}
+.bookleft svg{
+    color: rgb(132, 142, 156);
+    box-sizing: border-box;
+    margin: 0px;
+    min-width: 0px;
+    font-size: 24px;
+    fill: currentcolor;
     width: 1em;
     height: 1em;
 }
