--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -147,17 +147,27 @@
                 <div class="orderbook">
                     <div class="orderbook-header">
                         <div class="bookleft">
-                            <button><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-3kwgah"><path d="M4 4h7v7H4V4z" fill="#F6465D"></path><path d="M4 13h7v7H4v-7z" fill="#0ECB81"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M13 4h7v4h-7V4zm0 6h7v4h-7v-4zm7 6h-7v4h7v-4z" fill="currentColor"></path></svg></button>
+                            <button style="opacity:1"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-3kwgah"><path d="M4 4h7v7H4V4z" fill="#F6465D"></path><path d="M4 13h7v7H4v-7z" fill="#0ECB81"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M13 4h7v4h-7V4zm0 6h7v4h-7v-4zm7 6h-7v4h7v-4z" fill="currentColor"></path></svg></button>
                             <button><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-3kwgah"><path d="M4 4h7v7H4V4z" fill="#F6465D"></path><path d="M4 13h7v7H4v-7z" fill="#0ECB81"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M13 4h7v4h-7V4zm0 6h7v4h-7v-4zm7 6h-7v4h7v-4z" fill="currentColor"></path></svg></button>
                             <button><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-3kwgah"><path d="M4 4h7v7H4V4z" fill="#F6465D"></path><path d="M4 13h7v7H4v-7z" fill="#0ECB81"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M13 4h7v4h-7V4zm0 6h7v4h-7v-4zm7 6h-7v4h7v-4z" fill="currentColor"></path></svg></button>
                         </div>
-                        <div class="bookright"></div>
+                        <div class="bookright">
+                            <div class="bookright-item">
+                                <div class="child">
+                                    <span>0.01</span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-1tjoogw"><path d="M16.5 8.49v2.25L12 15.51l-4.5-4.77V8.49h9z" fill="currentColor"></path></svg>
+                                </div>
+                                <div class="child-right"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-yl1yvv"><path fill-rule="evenodd" clip-rule="evenodd" d="M10 3h4v4h-4V3zm0 7h4v4h-4v-4zm4 7h-4v4h4v-4z" fill="currentColor"></path></svg></div>
+                            </div>
+                            
+                        </div>
                     </div>
                     <div class="orderbook-tbheader"></div>
                     <div class="orderlist-container"></div>
                 </div>
                 <div class="chart"></div>
                 <div class="orderform"></div>
+                
                 <div class="market"></div>
                 <div class="trades"></div>
                 <div class="marketActivity"></div>
