--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -25,7 +25,8 @@
                             </a>
                             <div class="flex-menu">
                                 <div class="item-menu" style="width: 58px; ">
-                                    <img src="../static/img/homepage/dots-menu.png" alt="" style="width: 20px; height:20px;">
+                                    <img src="../static/img/homepage/dots-menu.png" alt=""
+                                        style="width: 20px; height:20px;">
                                     <i class="fa fa-caret-down" aria-hidden="true" style="margin: 0;"></i>
                                 </div>
                                 <div class="item-menu">
@@ -98,8 +99,17 @@
                                         <div class="btn-pow">POW</div>
                                     </div>
                                     <div class="sub-coin-item">
-                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="iconLeave css-bka6he"><path d="M15.11 5.63L6 6.89 15.11 4v1.63zM17.61 6.89v11.2h-1.25V8.33L6 6.89h11.61z" fill="currentColor"></path><path d="M6 6.89v11.16l.1.01.07.01.17.03h-.27l9.04 2.86V9.77L6 6.89zm3.4 3.2l1.87.6v1.84l-1.87-.59v-1.85zm1.87 7.66l-1.87-.59.03-3.85 1.88.59-.04 3.85z" fill="currentColor"></path></svg>
-                                        <a data-bn-type="link" href="https://www.binance.com/en/price/bitcoin" disabled="" target="_blank" class="css-im337v">Bitcoin Price</a>
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                            class="iconLeave css-bka6he">
+                                            <path
+                                                d="M15.11 5.63L6 6.89 15.11 4v1.63zM17.61 6.89v11.2h-1.25V8.33L6 6.89h11.61z"
+                                                fill="currentColor"></path>
+                                            <path
+                                                d="M6 6.89v11.16l.1.01.07.01.17.03h-.27l9.04 2.86V9.77L6 6.89zm3.4 3.2l1.87.6v1.84l-1.87-.59v-1.85zm1.87 7.66l-1.87-.59.03-3.85 1.88.59-.04 3.85z"
+                                                fill="currentColor"></path>
+                                        </svg>
+                                        <a data-bn-type="link" href="https://www.binance.com/en/price/bitcoin"
+                                            disabled="" target="_blank" class="css-im337v">Bitcoin Price</a>
                                     </div>
                                 </div>
                                 <div class="children-container2">
@@ -134,12 +144,26 @@
                         </div>
                         <div class="subHeader-right">
                             <div class="guide-left">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-1l3piql"><path fill-rule="evenodd" clip-rule="evenodd" d="M3 12a9 9 0 1118 0 9 9 0 01-18 0zm8.934 3.5H10v-7h1.934L16 12l-4.066 3.5z" fill="currentColor"></path></svg>
-                                <span style="margin-left: 4px; color: rgb(132, 142, 156); font-size: 12px; cursor: pointer;">Spot Tutorial</span>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                    class="css-1l3piql">
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M3 12a9 9 0 1118 0 9 9 0 01-18 0zm8.934 3.5H10v-7h1.934L16 12l-4.066 3.5z"
+                                        fill="currentColor"></path>
+                                </svg>
+                                <span
+                                    style="margin-left: 4px; color: rgb(132, 142, 156); font-size: 12px; cursor: pointer;">Spot
+                                    Tutorial</span>
                             </div>
                             <div class="guide-left" style="margin-left: 16px;">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-1l3piql"><path fill-rule="evenodd" clip-rule="evenodd" d="M4.896 3h14v18h-14V3zm11 13v2h-8v-2h8zm-8-3h8V6h-8v7zm6-5h-4v3h4V8z" fill="currentColor"></path></svg>
-                                <span style="margin-left: 4px; color: rgb(132, 142, 156); font-size: 12px; cursor: pointer;">Spot Guidance</span>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                    class="css-1l3piql">
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M4.896 3h14v18h-14V3zm11 13v2h-8v-2h8zm-8-3h8V6h-8v7zm6-5h-4v3h4V8z"
+                                        fill="currentColor"></path>
+                                </svg>
+                                <span
+                                    style="margin-left: 4px; color: rgb(132, 142, 156); font-size: 12px; cursor: pointer;">Spot
+                                    Guidance</span>
                             </div>
                         </div>
                     </div>
@@ -147,27 +171,59 @@
                 <div class="orderbook">
                     <div class="orderbook-header">
                         <div class="bookleft">
-                            <button style="opacity:1"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-3kwgah"><path d="M4 4h7v7H4V4z" fill="#F6465D"></path><path d="M4 13h7v7H4v-7z" fill="#0ECB81"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M13 4h7v4h-7V4zm0 6h7v4h-7v-4zm7 6h-7v4h7v-4z" fill="currentColor"></path></svg></button>
-                            <button><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-3kwgah"><path d="M4 4h7v7H4V4z" fill="#F6465D"></path><path d="M4 13h7v7H4v-7z" fill="#0ECB81"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M13 4h7v4h-7V4zm0 6h7v4h-7v-4zm7 6h-7v4h7v-4z" fill="currentColor"></path></svg></button>
-                            <button><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-3kwgah"><path d="M4 4h7v7H4V4z" fill="#F6465D"></path><path d="M4 13h7v7H4v-7z" fill="#0ECB81"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M13 4h7v4h-7V4zm0 6h7v4h-7v-4zm7 6h-7v4h7v-4z" fill="currentColor"></path></svg></button>
+                            <button style="opacity:1"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                                    fill="none" class="css-3kwgah">
+                                    <path d="M4 4h7v7H4V4z" fill="#F6465D"></path>
+                                    <path d="M4 13h7v7H4v-7z" fill="#0ECB81"></path>
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M13 4h7v4h-7V4zm0 6h7v4h-7v-4zm7 6h-7v4h7v-4z" fill="currentColor"></path>
+                                </svg></button>
+                            <button><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                    class="css-3kwgah">
+                                    <path d="M4 4h7v7H4V4z" fill="#F6465D"></path>
+                                    <path d="M4 13h7v7H4v-7z" fill="#0ECB81"></path>
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M13 4h7v4h-7V4zm0 6h7v4h-7v-4zm7 6h-7v4h7v-4z" fill="currentColor"></path>
+                                </svg></button>
+                            <button><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                    class="css-3kwgah">
+                                    <path d="M4 4h7v7H4V4z" fill="#F6465D"></path>
+                                    <path d="M4 13h7v7H4v-7z" fill="#0ECB81"></path>
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M13 4h7v4h-7V4zm0 6h7v4h-7v-4zm7 6h-7v4h7v-4z" fill="currentColor"></path>
+                                </svg></button>
                         </div>
                         <div class="bookright">
                             <div class="bookright-item">
                                 <div class="child">
                                     <span>0.01</span>
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-1tjoogw"><path d="M16.5 8.49v2.25L12 15.51l-4.5-4.77V8.49h9z" fill="currentColor"></path></svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                        class="css-1tjoogw">
+                                        <path d="M16.5 8.49v2.25L12 15.51l-4.5-4.77V8.49h9z" fill="currentColor"></path>
+                                    </svg>
                                 </div>
-                                <div class="child-right"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-yl1yvv"><path fill-rule="evenodd" clip-rule="evenodd" d="M10 3h4v4h-4V3zm0 7h4v4h-4v-4zm4 7h-4v4h4v-4z" fill="currentColor"></path></svg></div>
+                                <div class="child-right"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                                        fill="none" class="css-yl1yvv">
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M10 3h4v4h-4V3zm0 7h4v4h-4v-4zm4 7h-4v4h4v-4z" fill="currentColor">
+                                        </path>
+                                    </svg></div>
                             </div>
-                            
+
                         </div>
                     </div>
-                    <div class="orderbook-tbheader"></div>
+                    <div class="orderbook-tbheader">
+                        <div class="content">
+                            <div class="item" style="flex: 1 1 0%; justify-content: flex-start;">Price(USDT)</div>
+                            <div class="item" style="flex: 1 1 0%; justify-content: flex-end;">Amount(BTC)</div>
+                            <div class="item" style="flex: 1 1 0%; justify-content: flex-end; text-align: right;">Total</div>
+                        </div>
+                    </div>
                     <div class="orderlist-container"></div>
                 </div>
                 <div class="chart"></div>
                 <div class="orderform"></div>
-                
+
                 <div class="market"></div>
                 <div class="trades"></div>
                 <div class="marketActivity"></div>
