--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -219,7 +219,24 @@
                             <div class="item" style="flex: 1 1 0%; justify-content: flex-end; text-align: right;">Total</div>
                         </div>
                     </div>
-                    <div class="orderlist-container"></div>
+                    <div class="orderlist-container">
+                        <div class="orderbook-list-container" style="position: relative; height: 359px; width: 320px; overflow: auto; will-change: transform; direction: ltr;">
+                            <div style="height: 340px; width: 100%;">
+                                <div class="orderbook-row-container">
+                                    <div class="row-container">
+                                        <div class="row-content">
+                                            <div class="ask-light" style="font-size: 12px; flex: 1 1 0%; text-align: left; color: rgb(246, 70, 93);">27640.92</div>
+                                            <div class="text" style="text-align: right;">0.01510</div>
+                                            <div class="text" style="text-align: right;">417.37789</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="resize-triggers">
+
+                        </div>
+                    </div>
                 </div>
                 <div class="chart"></div>
                 <div class="orderform"></div>
