--- a/static/css/trade_coin.css
+++ b/static/css/trade_coin.css
@@ -650,12 +650,15 @@ i {
 }
 .orderbook-tbheader{
     display: flex;
+    flex-direction: column;
     margin: 0px 16px 6px 16px;
 }
 .orderbook-tbheader .content{
     display: flex;
     height: 20px;
+    -webkit-box-pack: justify;
     justify-content: space-between;
+    -webkit-box-align: center;
     align-items: center;
     font-size: 12px;
     color: rgb(132, 142, 156);
