--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -215,7 +215,7 @@
                     <div class="orderbook-tbheader">
                         <div class="content">
                             <div class="item" style="flex: 1 1 0%; justify-content: flex-start;">Price(USDT)</div>
-                            <div class="item" style="flex: 1 1 0%; justify-content: flex-end;">Amount(BTC)</div>
+                            <div class="item" style="flex: 1 1 0%; justify-content: flex-end; text-align: right;">Amount(BTC)</div>
                             <div class="item" style="flex: 1 1 0%; justify-content: flex-end; text-align: right;">Total</div>
                         </div>
                     </div>
